--- a/gobotany/static/sass/_about.scss
+++ b/gobotany/static/sass/_about.scss
@@ -293,8 +293,8 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
         dt {
             clear: left;
             float: left;
-            line-height: 25px;
-            padding: 7px 10px 10px 38px;
+            line-height: 27px;
+            padding: 7px 10px 0 38px;
             width: 190px;
             &:first-child, &:first-child + dd {
                 border-top: 0;
